# job_parse

./: README.md  pyproject.toml
src/: load_api.py  main.py  test.py  user_interaction.py  working_with_vacancies.py
